assets/css/global.scss
$primary: #1f3fc7;
$primary-light: #0064FF;
$primary-dark: #04083C;
$primary-trans: #cddfffa6;
$red-light: #FFDFDD;
$light-grey: #DCE0F2;

$secondary: #f2793c;

$blue: #1d3b8b;
$bluedark: #040a3b;
$polygonbackground: #0032ff;
$bluepale: #3d4269;
$bluetrans: #f4f5f7;
$light-blue: lighten($blue, 60);

$green: #7aff29;
$red: #ff4200;
$yellow: #ffdb00;
$yellow-light: #FFF7BF;
$purple: #5c00ff;
$pink: #a800ff;
$turquoise: #3dbaf7;
$textOrange: #da9446;
$transition: .15s;
$theme-colors: (
        "secondary": $secondary
);
@import "../../node_modules/bootstrap/scss/bootstrap";
@import "../../node_modules/quill/dist/quill.snow.css";


.bg-light-grey {
  background-color: $light-grey !important;
}

.bg-primary-dark {
  background-color: $primary-dark !important;
}

.bg-light-blue {
  background-color: $light-blue;
}

.bg-md-light-blue {
  @include media-breakpoint-up(md) {
    background-color: $light-blue;
  }
}
.bg-light-yellow {
    background-color: $yellow-light;
}

.btn-secondary {
  color: $light-grey;
}
.bg-section {
  background-color: $bluetrans;
}

@mixin btn-color($color-pri, $color-sec, $color-border) {
  background-color: $color-pri;
  color: $color-sec !important;
  border: 1px solid;
  border-color: $color-border;
  &:hover,
  &:focus,
  &:active,
  &.active {
    background-color: darken($color-pri, 10%) !important;
    color: $color-sec !important;
    border-color: darken($color-border, 10%) !important;
  }
}

.btn[class*="-outline-"] {
  border-width: 2.5px;
  border-radius: 5px;
}
.btn-tertiary {
  @include btn-color($light-grey, $dark, transparent);
}
.btn-white {
  @include btn-color(white, $dark, transparent);
}

.left {
  left: 0;
}

.right {
  right: 0;
}

.top {
  top: 0;
}

.bottom {
  bottom: 0;
}

.z-minus {
  z-index: -1 !important;
}

.z-1 {
  z-index: 1;
}

.z-0 {
  z-index: 0;
}

.border-radius-0 {
  border-radius: 0;
}

